--- a/functions/.vscode/tasks.json
+++ b/functions/.vscode/tasks.json
@@ -7,6 +7,13 @@
             "type": "npm",
             "script": "deploy",
             "problemMatcher": []
+        },
+        {
+            "type": "typescript",
+            "tsconfig": "tsconfig.json",
+            "problemMatcher": [
+                "$tsc"
+            ]
         }
     ]
 }
