--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "author": "guitarrapc",
   "license": "",
   "dependencies": {
-    "@google-cloud/firestore" : "^0.10.0",
+    "@google-cloud/firestore": "^0.10.0",
+    "@types/firebase": "^2.4.32",
     "firebase-admin": "~5.5.1",
     "firebase-functions": "^0.7.3"
   },
